--- a/index.html
+++ b/index.html
@@ -19,7 +19,59 @@
         </div>
     </header>
     <main>
-        
+        <section id="current-poll-wrapper">
+            <div class="init-form" id="init-form">
+                <form>
+                    <label>
+                        Posit a Query:
+                        <input type="text" name="query" id="query" value=""/>
+                    </label>
+                    <label>
+                        Response A:
+                        <input type="text" name="response-a" id="r-a" value=""/>
+                    </label>
+                    <label>
+                        Response B:
+                        <input type="text" name="response-b" id="r-b" value=""/>
+                    </label>
+                    <button id="generate-poll">Generate Query</button>
+                    <!-- <input type="button" name="Generate Poll" id="generate-poll" value="Generate Query"> -->
+                </form>
+                <input type="button" name="Close Poll" id="close-poll" value="Close Poll">
+            </div>
+            <div class="reply-form" id="reply-form">
+                <h2>Current Query</h2>
+                <p id="current-query">No current poll</p>
+                <div id="query-holder">
+                    <div id="query-A">
+                        <h3>Response A</h3>
+                        <div id="response-a">
+                            <p id="cq-a"></p>
+                            <p id="count-a">0</p>
+                        </div>
+                        <div id="q-a-vote-holder">
+                            <input type="button" id="up-a" value="🔺">
+                            <input type="button" id="down-a" value="🔻">
+                        </div>
+                    </div>
+                    <div id="query-b">
+                        <h3>Response B</h3>
+                        <div id="response-b">
+                            <p id="cq-b"></p>
+                            <p id="count-b">0</p>
+                        </div>
+                        <div id="q-b-vote-holder">
+                            <input type="button" id="up-b" value="🔺">
+                            <input type="button" id="down-b" value="🔻">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="past-poll-wrapper">
+            <h2>Past Polls</h2>
+            <div class="past-polls"></div>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
